fixed up playground solution

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<rxjs-playground-chotchkies></rxjs-playground-chotchkies>
+<div class="container">
+  <rxjs-playground-chotchkies></rxjs-playground-chotchkies>
+</div>
